src/App.css
/* ... */
.fade-in-side.visible {
  animation: fadeInFromSide 1.5s ease forwards;
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(20px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.fade-in {
  animation: fadeIn 1s ease forwards;
  opacity: 0;
  /* Start hidden */
}

.resume-download-container {
  text-align: center;
  margin-top: 20px;
  /* Adjust the margin as needed */
  border-color: #8c8c8c
}

.resume-download-button {
  display: inline-block;
  background-color: var(--background);
  /* Button color */
  color: var(--input-text-dark);
  padding: 10px 20px;
  /* Adjust padding as needed */
  border-radius: 5px;
  /* Rounded corners for the button */
  text-decoration: none;
  /* Remove underline from link */
  font-size: 16px;
  /* Adjust font size as needed */
  transition: background-color 0.3s;
  /* Smooth transition for hover effect */
  margin-bottom: 40px;
  border: 2px solid #333333;
  /* Add a border */

}




.resume-download-button:hover {
  background-color: #5e5e5e;
  
}


:root {
  --transition-time: 0.3s;
  /* Define a variable for transition time */
}

body {
  transition: background-color var(--transition-time), color var(--transition-time);
  /* Add other properties as needed */
}

/* Add transitions to other elements that should change with theme */
.typing-animation,
.sub-title,
.footer,
.portfolio-item,
.social-links img {
  transition: color var(--transition-time), background-color var(--transition-time), box-shadow var(--transition-time);
  /* Add other properties as needed */
}

/* Ensure your SVGs inside buttons also transition */
.dark-mode-toggle svg {
  transition: fill var(--transition-time);
}

@keyframes blinkCursor {

  from,
  to {
    border-color: transparent;
  }

  50% {
    border-color: var(--background);
  }
}

.typing-animation {
  display: inline-block;
  white-space: nowrap;
  overflow: hidden;
  margin-left: -20px;
  /* Removed the width restriction to allow natural text flow */
  border-right: 2px solid black;
  /* This will represent the cursor */
  animation: typing 2s steps(12, end) forwards,
    /* Typing effect */
    blinkCursor 1s step-end infinite;
  /* Blinking cursor effect */
}

.header-container {
  display: flex;
  justify-content: space-between;
  /* Align children to each end */
  align-items: center;
  /* Center children vertically */
  padding: 1rem;
}



.dark-mode-toggle {
  animation: fadeIn 3s ease-out forwards;
  /* Existing styles */
  margin-top: 0%;
  /* Adjusted to remove negative margin */
  margin-left: 100px;
  /* Adjusted to remove margin */
}

/* Ensure the SVG fills the button appropriately */
.dark-mode-toggle svg {
  height: 90%;
  width: auto;
  margin-left: -4px;
}


/* Responsive Design */
@media (max-width: 768px) {
  .portfolio-item {
    /* Adjust the font size and padding for smaller screens */
    font-size: small;
    /* Adjust as needed */
    padding: 1rem;
    /* Adjust as needed */
  }

  .portfolio-item h3 {
    /* Adjust the heading size for smaller screens */
    font-size: medium;
    /* Adjust as needed */
  }

  .portfolio-item p {
    /* Adjust the paragraph size for smaller screens */
    font-size: small;
    /* Adjust as needed */
    overflow-wrap: break-word;
    /* Ensures long words will wrap and not overflow */
  }
}

/* Further adjustments for even smaller screens */
@media (max-width: 480px) {
  .portfolio-item {
    font-size: small;
    /* Adjust as needed */
    padding: 0.5rem;
    /* Adjust as needed */
  }

  .portfolio-item h3 {
    font-size: smaller;
    /* Adjust as needed */
  }

  .portfolio-item p {
    font-size: small;
    /* Adjust as needed */
  }
}



.moving_shape {
  width: 25vh;
  height: 25vh;
  margin-left: 2vw;
  background-color: rgba(0, 0, 0, 0);
  background-repeat: repeat;
  background-size: auto auto;
  border: 2px solid var(--background-light);
  /* Set the initial border */
  color: #000000;
  animation: border-move 15s linear infinite forwards;
  /* Only use border-move animation */
  background: url('https://avatars.githubusercontent.com/u/100277240?v=4') no-repeat;
  /* Replace 'your-image-url.jpg' with the actual image URL */
  background-size: cover;
  background-position: top -2px center;
  background-blend-mode: multiply;
}
/*  */

.j {
  height: 370px;
  width: 370px;
  position: relative;
  margin-top: 15vh;
  margin-bottom: -10vh;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}


@keyframes bg-move {
  0% {
    background-position: 0 50%
  }

  50% {
    background-position: 100% 50%
  }

  to {
    background-position: 0 50%
  }
}

@keyframes border-move {
  0% {
    border-radius: 51% 49% 34% 66% / 39% 66% 34% 61%;
  }

  10% {
    border-radius: 39% 61% 38% 62% / 53% 54% 46% 47%;
  }

  20% {
    border-radius: 56% 44% 52% 48% / 57% 35% 65% 43%;
  }

  30% {
    border-radius: 41% 59% 45% 55% / 33% 56% 44% 67%;
  }

  40% {
    border-radius: 46% 54% 60% 40% / 55% 74% 26% 45%;
  }

  50% {
    border-radius: 44% 56% 22% 78% / 31% 74% 26% 69%;
  }

  60% {
    border-radius: 31% 69% 32% 68% / 31% 71% 29% 69%;
  }

  70% {
    border-radius: 44% 56% 60% 40% / 63% 36% 64% 37%;
  }

  80% {
    border-radius: 46% 54% 38% 62% / 44% 48% 52% 56%;
  }

  90% {
    border-radius: 66% 34% 57% 43% / 49% 51% 49% 51%;
  }

  100% {
    border-radius: 51% 49% 34% 66% / 39% 66% 34% 61%;
  }
}

@media screen and (max-width: 800px) {
  .j {
    margin-top: 200px;
    height: 200px;
    width: 220px;
    margin-left: -50px;

  }

  .subtitles {
    margin-top: 80px;
    
  }
  .timeline-period::after{
    top: -120%;
  }
}

@media screen and (max-width: 592px) {
  .timeline-period::after{
    top: -100%;
  }
}


@media screen and (max-width: 289px) {
  .timeline-period::after{
    top: -200%;
  }
  
}
.education-container {
  display: flex;
  justify-content: space-between;
}
/* ... */

